# orkige_editor - the in-engine editor shell (Phase 4 pulled forward).
# An Orkige app: SDL3 owns the window/event loop, Orkige::Engine renders into
# it (externalWindowHandle), the UI is Dear ImGui through OGRE's own
# ImGuiOverlay integration (no imgui SDL backend - see ImGuiSDL3Input.cpp).

# imgui comes into the build through OGRE's Overlay component anyway, but that
# link is $<LINK_ONLY:...>, so the editor needs its own find_package to get
# the imgui include directories for direct ImGui:: calls.
find_package(imgui CONFIG REQUIRED)
# transform gizmos in the Scene panel (built against the same docking imgui)
find_package(imguizmo CONFIG REQUIRED)

# EditorCore: the UI-independent editor logic (selection, undo/redo command
# stack, object operations). Split into its own library so the headless unit
# tests (tests/editor_core) exercise exactly what the editor links.
add_library(orkige_editor_core STATIC
    EditorCore.h
    EditorCore.cpp
)
target_include_directories(orkige_editor_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(orkige_editor_core PUBLIC Orkige::Engine)

add_executable(orkige_editor
    main.cpp
    ImGuiSDL3Input.h
    ImGuiSDL3Input.cpp
)

target_link_libraries(orkige_editor PRIVATE
    orkige_editor_core
    imgui::imgui
    imguizmo::imguizmo
)

# Editor-only: point at the RTSS shader library shipping with the
# vcpkg-installed OGRE so the editor runs straight out of the build tree
# (same approach as samples/hello_orkige).
target_compile_definitions(orkige_editor PRIVATE
    ORKIGE_EDITOR_MEDIA_DIR="${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/share/ogre/Media"
    # sample assets (test_mesh.glb, generated by Util/make_test_mesh.py)
    ORKIGE_EDITOR_ASSET_DIR="${CMAKE_SOURCE_DIR}/samples/hello_orkige/media"
    # default directory the Scene Path modal offers for .oscene files
    ORKIGE_EDITOR_SCENE_DIR="${CMAKE_SOURCE_DIR}/samples/scenes"
    ORKIGE_EDITOR_VERSION="${PROJECT_VERSION}"
    # play mode spawns this binary (Play toolbar button / playtest hooks)
    ORKIGE_EDITOR_PLAYER_PATH="$<TARGET_FILE:orkige_player>"
)

# play mode needs the player binary present at runtime
add_dependencies(orkige_editor orkige_player)
